--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "gatsby-plugin-netlify-cms": "^4.3.5",
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-source-contentful": "^2.3.15",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-sharp": "^2.5.3",
+    "gsap": "^3.3.4",
     "netlify-cms-app": "^2.12.14",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
