--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "gatsby": "^2.22.15",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-netlify-cms": "^4.3.5",
@@ -14,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-source-contentful": "^2.3.15",
     "gatsby-source-filesystem": "^2.3.8",
