--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
+    "classnames": "^2.2.6",
     "gatsby": "^2.22.15",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.5",
